--- a/ek.HTML
+++ b/ek.HTML
@@ -9,7 +9,7 @@
     <hr color="black" size="7" >
     <br>
 <body style="color: black;font-family: sans-serif;font-size: 200%;">
-    Merhaba ben BERTUĞ KALKAN 11 yaşındayım ve Bahçeşehir Kollejinde okuyorum. 5. sınıfım 3 yıldırlı teknolojiye uğraşıyorum.Arduino html css ve 3d tasarım gibi konularla ilgileniyorum.
+    Merhaba ben BERTUĞ KALKAN.3 yıldırlı teknolojiye uğraşıyorum.Arduino html css ve 3d tasarım gibi konularla ilgileniyorum.
 </body>
     
 
