--- a/ek2.html
+++ b/ek2.html
@@ -21,7 +21,7 @@
         <strong><h1 style="font-family: sans-serif;color: black;font-size: 150%;">HC-SR04 İLE ARABA PARK SENSÖRÜ YAPIMI</h1></strong>
         <p>
         <body style="font-size: 100%;color: black;font-family: sans-serif;"><strong>HC-SR04 ve bir aktif buzzer ile araba park sensörü yaptık. </strong></body> 
-        <p><a style="color: turquoise;" href="Park Sensou.html">BAĞLANTIYA ULAŞMAK İÇİN TIKLAYIN</a>  
+        <p><a style="color: turquoise;" href="Park Sensoru.html">BAĞLANTIYA ULAŞMAK İÇİN TIKLAYIN</a>  
             
             <strong><h1 style="font-family: sans-serif;color: black;font-size: 150%;">NEO PİXEL İLE MASA AYDINLATMASI YAPTIK</h1></strong>
             <p>
