--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <hr color="black" size="7" >  
 <center><h1 style="font-size: 1000% ;font-family: Verdana, Geneva, Tahoma, sans-serif;color: rgb(0, 0, 0)"> BERTUG KALKAN </h1></center>
 <hr color="black" size="7" >  
-<p><h4><strong><center style="font-family: sans-serif;color: rgb(0, 0, 0);">BU BERTUĞ KALKANIN PROJE SİTESİDİR.</center></strong></h4>
+<p><strong><center style="font-family: sans-serif;color: rgb(0, 0, 0);">BU BERTUĞ KALKANIN PROJE SİTESİDİR.</center></strong>
 
 </body>
 
