--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf8">
+    <meta name = "keywords" content="Arduino,Bertuğ Kalkan">
     <title>BERTUG KALKAN</title>
 </head>
 <body>
